--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,18 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "ng-gallery": "^11.0.0",
+    "ng2-file-upload": "^5.0.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
+  },
+  "overrides": {
+    "ng2-file-upload": {
+      "@angular/common": "17.0.4",
+      "@angular/core": "17.0.4"
+    }
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.3",
