--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@microsoft/signalr": "^8.0.0",
     "bootswatch": "^5.3.2",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
